feat: add new pages to describe few word

--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 <html>
     <head>
         <title>M Davinda Rinaldy: HTML Basic</title>
-        <meta name="HTML Basic" description="Page ini digunakan untuk belajar penggunaan HTML Basic">
+        <meta name="HTML Basic" content="Page ini digunakan untuk belajar penggunaan HTML Basic">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="UTF-8">
     </head>
     <body>
         <h1>Paragraf Pertama</h1>
-        <p>Saya adalah seseorang yang sangat <u>antusias</u> dan memiliki ketertarikan mendalam terhadap <u>dunia pemrograman</u>. Ketertarikan ini tumbuh dari rasa ingin tahu yang tinggi dan kepuasaan tersendiri ketika berhasil memecahkan sebuah masalah melalui kode. Saya sangat <u>menikmati proses belajar</u> pemrograman, baik itu mempelajari hal baru, memperdalam logika maupun memahami struktur dalam pemecahan masalah</p>
+        Saya adalah seseorang yang sangat <u>antusias</u> dan memiliki ketertarikan mendalam terhadap <u>dunia pemrograman</u>.Ketertarikan ini tumbuh dari rasa ingin tahu yang tinggi dan kepuasaan tersendiri ketika berhasil memecahkan sebuah masalah melalui kode. Saya sangat <u>menikmati proses belajar</u> pemrograman, baik itu mempelajari hal baru, memperdalam <a href="./pages/logika.html" target="_blank">logika</a> maupun memahami struktur dalam pemecahan masalah</p>
         <h1>Paragraf Kedua</h1>
-        <p><mark>Saya masih perlu banyak memperdalam pemahaman</mark> tentang <i>case study</i> serta penyelesaian masalahnya, logika dan algoritma serta penguasaan <i>syntax</i> dan dokumentasi untuk menjadi <i>programmer</i> yang kompeten.</p>
+        <p><mark>Saya masih perlu banyak memperdalam pemahaman</mark> tentang <i>case study</i> serta penyelesaian masalahnya, logika dan <a href="./pages/algoritma.html" target="_blank">algoritma</a> serta penguasaan <i>syntax</i> dan dokumentasi untuk menjadi <i>programmer</i> yang kompeten.</p>
         <h1>Paragraf Ketiga</h1>
-        <p>Dalam 1-2 tahun ke depan, saya ingin memulai karier sebagai <i>programmer</i>, sambil terus belajar berbagai bahasa pemrograman dan mengembangkan kemampuan saya, saya juga memiliki ketertarikan khusus untuk <b>mengembangkan game</b> saya sendiri yang selama ini menjadi impian saya</p>
+        <p>Dalam 1-2 tahun ke depan, saya ingin memulai <a href="./pages/karier.html">karier</a> sebagai <i>programmer</i>, sambil terus belajar berbagai bahasa pemrograman dan mengembangkan kemampuan saya, saya juga memiliki ketertarikan khusus untuk <b>mengembangkan game</b> saya sendiri yang selama ini menjadi impian saya</p>
     </body>
 </html>
