--- a/index.html
+++ b/index.html
@@ -7,11 +7,17 @@
         <meta charset="UTF-8">
     </head>
     <body bgcolor="#F08080">
-        <h1>Paragraf Pertama</h1>
-        <p>Saya adalah seseorang yang sangat <u>antusias</u> dan memiliki ketertarikan mendalam terhadap <u>dunia pemrograman</u>.Ketertarikan ini tumbuh dari rasa ingin tahu yang tinggi dan kepuasaan tersendiri ketika berhasil memecahkan sebuah masalah melalui kode. Saya sangat <u>menikmati proses belajar</u> pemrograman, baik itu mempelajari hal baru, memperdalam <a href="./pages/logika.html" target="_blank">logika</a> maupun memahami struktur dalam pemecahan masalah</p>
-        <h1>Paragraf Kedua</h1>
-        <p><mark title="this is a mark">Saya masih perlu banyak memperdalam pemahaman</mark> tentang <i>case study</i> serta penyelesaian masalahnya, logika dan <a href="./pages/algoritma.html" target="_blank">algoritma</a> serta penguasaan <i>syntax</i> dan dokumentasi untuk menjadi <i>programmer</i> yang kompeten.</p>
-        <h1>Paragraf Ketiga</h1>
-        <p>Dalam 1-2 tahun ke depan, saya ingin memulai <a href="./pages/karier.html">karier</a> sebagai <i>programmer</i>, sambil terus belajar berbagai bahasa pemrograman dan mengembangkan kemampuan saya, saya juga memiliki ketertarikan khusus untuk <b>mengembangkan game</b> saya sendiri yang selama ini menjadi impian saya</p>
+        <div>
+            <h1>Paragraf Pertama</h1>
+            <p>Saya adalah seseorang yang sangat <u>antusias</u> dan memiliki ketertarikan mendalam terhadap <u>dunia pemrograman</u>.Ketertarikan ini tumbuh dari rasa ingin tahu yang tinggi dan kepuasaan tersendiri ketika berhasil memecahkan sebuah masalah melalui kode. Saya sangat <u>menikmati proses belajar</u> pemrograman, baik itu mempelajari hal baru, memperdalam <a href="./pages/logika.html" target="_blank">logika</a> maupun memahami struktur dalam pemecahan masalah</p>
+        </div>
+        <div>
+            <h1>Paragraf Kedua</h1>
+            <p><mark title="this is a mark">Saya masih perlu banyak memperdalam pemahaman</mark> tentang <i>case study</i> serta penyelesaian masalahnya, logika dan <a href="./pages/algoritma.html" target="_blank">algoritma</a> serta penguasaan <i>syntax</i> dan dokumentasi untuk menjadi <i>programmer</i> yang kompeten.</p>
+        </div>
+        <div>
+            <h1>Paragraf Ketiga</h1>
+            <p>Dalam 1-2 tahun ke depan, saya ingin memulai <a href="./pages/karier.html">karier</a> sebagai <i>programmer</i>, sambil terus belajar berbagai bahasa pemrograman dan mengembangkan kemampuan saya, saya juga memiliki ketertarikan khusus untuk <b>mengembangkan game</b> saya sendiri yang selama ini menjadi impian saya</p>
+        </div>
     </body>
 </html>
