refactor: change the formatting to css

--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="UTF-8">
     </head>
-    <body bgcolor="#F08080">
+    <body style="background-color: aqua;">
         <div>
             <h1>Paragraf Pertama</h1>
             <p>Saya adalah seseorang yang sangat <u>antusias</u> dan memiliki ketertarikan mendalam terhadap <u>dunia pemrograman</u>.Ketertarikan ini tumbuh dari rasa ingin tahu yang tinggi dan kepuasaan tersendiri ketika berhasil memecahkan sebuah masalah melalui kode. Saya sangat <u>menikmati proses belajar</u> pemrograman, baik itu mempelajari hal baru, memperdalam <a href="./pages/logika.html" target="_blank">logika</a> maupun memahami struktur dalam pemecahan masalah</p>
         </div>
         <div>
             <h1>Paragraf Kedua</h1>
-            <p><mark title="this is a mark">Saya masih perlu banyak memperdalam pemahaman</mark> tentang <i>case study</i> serta penyelesaian masalahnya, logika dan <a href="./pages/algoritma.html" target="_blank">algoritma</a> serta penguasaan <i>syntax</i> dan dokumentasi untuk menjadi <i>programmer</i> yang kompeten.</p>
+            <p><span style="background-color: blue;">Saya masih perlu banyak memperdalam pemahaman</span> tentang <i>case study</i> serta penyelesaian masalahnya, logika dan <a href="./pages/algoritma.html" target="_blank">algoritma</a> serta penguasaan <i>syntax</i> dan dokumentasi untuk menjadi <i>programmer</i> yang kompeten.</p>
         </div>
         <div>
             <h1>Paragraf Ketiga</h1>
