--- a/pages/logika.html
+++ b/pages/logika.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Logika</title>
 </head>
-<body bgcolor="pink">
+<body style="background-color: pink">
     <h1>Logika</h1>
     <p>logika <mark><i>/lo-gi-ka/</i></mark> adalah pengetahuan tentang kaidah berpikir atau jalan pikiran yang masuk akal</p>
     <p>Referensi: <a href="https://kbbi.web.id/logika" target="_blank">KBBI Logika</a></p>
