--- a/pages/algoritma.html
+++ b/pages/algoritma.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Algoritma</title>
 </head>
-<body bgcolor="gray">
+<body style="background-color: aquamarine;">
     <h1>Algoritma</h1>
     <p>algoritma adalah urutan dari sejumlah langkah logis dan sistematis untuk memecahkan suatu masalah tertentu </p>
     <p>Referensi: <a href="https://www.gramedia.com/literasi/pengertian-algoritma/?srsltid=AfmBOoqwxSuMmmI4yJrUhlXU3jdVmaDmwgzN027XzPriOz9BSrLIN0CE" target="_blank">Gramedia: Algoritma</a></p>
