--- a/pages/karier.html
+++ b/pages/karier.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Karier</title>
 </head>
-<body bgcolor="skyblue">
+<body style="background-color: skyblue">
     <h1>Karier</h1>
     <p>karier <mark><i>/ka-ri-er/</i></mark> adalah perkembangan dan kemajuan dalam kehidupan, pekerjaan, jabatan dan sebagainya.</p>
     <p>Referensi: <a href="https://kbbi.web.id/karier" target="_blank">KBBI Logika</a></p>
