--- a/pages/karier.html
+++ b/pages/karier.html
@@ -7,7 +7,7 @@
 </head>
 <body style="background-color: skyblue">
     <h1>Karier</h1>
-    <p>karier <mark><i>/ka-ri-er/</i></mark> adalah perkembangan dan kemajuan dalam kehidupan, pekerjaan, jabatan dan sebagainya.</p>
+    <p>karier <span style="background-color: yellow; font-style: italic;">/ka-ri-er/</span> adalah perkembangan dan kemajuan dalam kehidupan, pekerjaan, jabatan dan sebagainya.</p>
     <p>Referensi: <a href="https://kbbi.web.id/karier" target="_blank">KBBI Logika</a></p>
     <p>Go back to <a href="../index.html" target="_blank">home</p>
 </body>
