--- a/pages/logika.html
+++ b/pages/logika.html
@@ -7,7 +7,7 @@
 </head>
 <body style="background-color: pink">
     <h1>Logika</h1>
-    <p>logika <mark><i>/lo-gi-ka/</i></mark> adalah pengetahuan tentang kaidah berpikir atau jalan pikiran yang masuk akal</p>
+    <p>logika <span style="background-color: yellow; font-style: italic;">/lo-gi-ka/</span> adalah pengetahuan tentang kaidah berpikir atau jalan pikiran yang masuk akal</p>
     <p>Referensi: <a href="https://kbbi.web.id/logika" target="_blank">KBBI Logika</a></p>
     <p>Go back to <a href="../index.html" target="_blank">home</p>
 </body>
